# dped

./: .gitignore  12.py  config.yml  intersection.py  main.ipynb  main.py  parallel.py  patches.py  process_image.py  pyproject.toml  read_dataset.py  roi.py
intersect/: main.py
patch/: h5.py  parallel.py  patches.py  process_image.py
patch/patch/: parallel.py
