[project]
name = "dped"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.13.0",
    "matplotlib>=3.10.1",
    "mpi4py>=4.0.3",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "pyqt5>=5.15.11",
    "pyqt5-qt5==5.15.16",
    "rawpy>=0.24.0",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
]
